@@ -1,4 +1,4 @@
-.\" RCSid "$Id: ra_rgbe.1,v 1.2 2003/12/09 15:59:06 greg Exp $"
+.\" RCSid "$Id: ra_rgbe.1,v 1.3 2024/09/10 20:24:42 greg Exp $"
 .TH RA_RGBE 1 1/23/98 RADIANCE
 .SH NAME
 ra_rgbe - convert between different RADIANCE picture types
@@ -92,10 +92,17 @@ In this mode,
 should be used with the
 .I \-r
 option.
+.SH NOTES
+Hyperspectral Radiance pictures (.hsr files) are
+converted to approximate RGBE pixels.
+However, the colors may not be very accurate.
+Pass the HSR picture through
+.I rcomb(1)
+first if greater color fidelity is required.
 .SH AUTHOR
 Greg Ward
 .SH ACKNOWLEDGEMENT
 Work on this program was initiated and sponsored by the LESO
 group at EPFL in Switzerland.
 .SH "SEE ALSO"
-pfilt(1), printf(1), ra_xyze(1), rpict(1)
+pfilt(1), printf(1), ra_xyze(1), rcomb(1), rpict(1)
