@@ -2713,3 +2713,7 @@ to Mike DiPompeo of LightStanza for reporting the issue.)
 
 Added rxpict rendering tool based on C++ RpictSimulManager class.
 Multi-processing and spectral output are supported.
+
+Added crude ability to read and convert spectra to RGB in ximage,
+ra_bmp, and ra_rgbe programs.  Also updated fast tone-mapping
+library to handle spectral HSR inputs at the same time.
